app/assets/stylesheets/application.scss
/* ... */
.info-box {
  .info-box-header {
    padding: 10px;
    background-color: #f6f6f6;
    border-radius: 4px;
  }

  .info-box-content {
    margin-top: 10px;
  }
}

.muted {
  color: $text-muted;
}

.preview-image {
  overflow: auto;

  > img {
    width: 100px;
    max-height: 150px;
    margin: 0 10px 10px 0;
    float: left;
  }
}

.bounding-box {
  padding: 19px;
  margin-bottom: 20px;
  border: 1px solid #e3e3e3;
  border-radius: 4px;
}

.resource-type-icon {
  text-align: center;
}

.info-icon {
  font-size: 24px;
}

.info-icon-small {
  font-size: 16px;
}

.info-icon-large {
  font-size: 48px;
}

.gap {
  padding: 0 5px;
}

.delete-icon {
  vertical-align: middle;
  color: $brand-danger;
  font-weight: bold;
  font-size: 120%;

  &:hover {
    color: darken($brand-danger, 20%);
  }
}

.tool-suggestions-header {
  margin-bottom: 20px;
  color: $gray-darker;
}

.external-links {
  margin-top: 10px;
}

.fresh-icon {
  color: $brand-primary;
  margin-left: 5px;
}

.stale-icon {
  color: $brand-secondary;
  margin-left: 5px;
}

.missing-icon {
  color: $brand-secondary;
  margin-left: 5px;
}

.event-started-icon {
  color: $brand-primary;
  margin-left: 5px;
}

.event-expired-icon {
  color: $gray;
  margin-left: 5px;
}

.days_ago_text {
  color: grey;
  font-style: italic;
}

.latest_resource_description {
  /*
  min-width: 500px;
  min-height: 20px;
  */
  word-wrap: break-word;
}

div.legal-block {
  max-width: 800px;
  margin: auto;
}

input.loading {
  background: image-url('ajax-loader.gif') no-repeat right center;
}

.btn.loading {
  padding-right: 24px;
  background: image-url('ajax-loader.gif') no-repeat right center;
}

.url-wrap {
  display: inline-block;
  word-wrap: break-word;
  word-break: break-all;
  overflow-wrap: break-word;
}

.loading_image {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.bs-type-selectors ul {
  display: inline;
  padding: 0;
  padding-inline-start: 0;

  li {
    display: inline;
    padding: 10px;
  }
}

input[type=checkbox].field-lock {
  display: none;
}

input[type=checkbox].field-lock + label:before {
  font-family: FontAwesome;
  cursor: pointer;
  display: inline-block;
  content: "\f09c";
  letter-spacing: 10px;
  margin-left: 0.5em;
  vertical-align: middle;
  width: 1.5em;
}

input[type=checkbox].field-lock:checked + label:before {
  content: "\f023";
}

input[type=checkbox].field-lock:checked + label:before,
.field-lock-example-locked {
  color: $brand-success;
  font-size: 110%;
}

input[type=checkbox].field-lock + label:before,
.field-lock-example-open {
  color: $brand-warning;
  font-size: 110%;
}

.keyword-button {
  margin-right: 5px;
}

.external-button {
  margin-right: 5px;
}

.alert-info a {
  text-decoration: underline;
}

#why-register {
  ul {
    font-size: $font-size-large;

    li {
      margin: 1em 0;
    }
  }
}

.selected-tab {
  color: inherit;
  text-decoration: underline;
}

.term_suggestions .dropdown-backdrop {
  display: none;
}

.funding-logo {
  width: 100px;
  margin: 15px;
}

.list-card {
  @include floating-card;
  border-radius: 8px;
  margin: 0 10px 10px 0;
  position: relative;
  display: block;
  padding: 30px;

  h4 {
    margin: 0;
  }

  .list-card-heading {
    display: block;
    padding: 5px 0;
    line-height: 1.3;

    color: $headings-color;
    text-decoration: none;
  }
}

.header-notice {
  background-color: $state-info-bg;
  color: $state-info-text;
}

.omniauth-elixir_aai {
  width: 240px;
}

.omniauth-oidc {
  height: 42px;
}

// minor fix of the icon's alignment
.glyphicon-remove {
  top: 3px;
}


.description {
  border: 1px solid lightgrey;
  padding: 18px;
  border-radius: 5px;
  margin: 8px 0;
}

.description, .markdown {
  h1, h2 {
    font-size: $font-size-large;
    padding-bottom: 8px;
    border-bottom: 1px solid #eee;
  }
  h2 {
    padding-bottom: 6px;
  }
  h3, h4, h5, h6 {
    font-size: $font-size-base;
    padding-bottom: 4px;
  }
}

.filter-heading {
  cursor: pointer;
  color: $headings-color;
}

.filter-heading-active {
  color: $brand-primary;
}

.embedded-content {
  margin: 2em auto;

  iframe {
    display: block;
    margin: auto;
  }
}

.expand-filters {
  text-align: right;
  padding: 7px 20px 7px 20px !important;
  a {
    font-size: $font-size-small;
    color: $gray-light !important;
    cursor: pointer;
  }
}

.bulk-import-row {
  .scraped-metadata p {
    margin: 0;
  }
}

.user-list-avatar {
  border-radius: 8px 0 0 8px;
  float: left;
  margin-right: 8px;
}

.test-controls {
  padding: 10px;
  display: inline-block;
}

.collapsible-panel {
  .collapsible-panel-link {
    display: block;
    cursor: pointer;

    .panel-title:after {
      /* symbol for "opening" panels */
      font-family: 'Glyphicons Halflings'; /* essential for enabling glyphicon */
      float: right; /* adjust as needed */
      content: "\e113"; /* adjust as needed, taken from bootstrap.css */
    }
    &.collapsed {
      @include border-bottom-radius(($panel-border-radius - 1));
      .panel-title:after {
        /* symbol for "collapsed" panels */
        content: "\e114"; /* adjust as needed, taken from bootstrap.css */
      }
    }
  }
}

#cookie-banner {
  position: fixed;
  bottom: 0;
  width: 100%;
  padding-top: 10px;
  background-color: #ddd;
  z-index: 2;

  .btn {
    margin-bottom: 5px;
  }
}

.content-actions {
  gap: 10px;
  display: flex;
  width: 100%;

  .content-viewer-actions > .btn,
  .content-viewer-actions > .btn-group,
  .content-manager-actions > .btn,
  .content-manager-actions > .btn-group {
    margin-top: 5px; /* So they have some vertical spacing when collapsed on small screens */
  }

  .content-viewer-actions {
    flex-grow: 1;
    text-align: left;
  }

  .content-manager-actions {
    flex-grow: 1;
    text-align: right;
  }
}
/* ... */

